Allow migration upload timestamps
